exports[`Dropdown changes the class when clicked 1`] = `
<div
  aria-expanded={false}
  aria-haspopup={true}
  className="uk-button-dropdown"
  onClick={[Function]}
  onMouseEnter={false}
  onMouseLeave={false}>
  <button
    className="uk-button">
    Click 
    <i
      className="uk-icon-caret-down" />
  </button>
</div>
`;

exports[`Dropdown changes the class when clicked 2`] = `
<div
  aria-expanded={true}
  aria-haspopup={true}
  className="uk-button-dropdown uk-open"
  onClick={[Function]}
  onMouseEnter={false}
  onMouseLeave={false}>
  <button
    className="uk-button">
    Click 
    <i
      className="uk-icon-caret-down" />
  </button>
</div>
`;

exports[`Dropdown changes the class when clicked 3`] = `
<div
  aria-expanded={false}
  aria-haspopup={true}
  className="uk-button-dropdown"
  onClick={[Function]}
  onMouseEnter={false}
  onMouseLeave={false}>
  <button
    className="uk-button">
    Click 
    <i
      className="uk-icon-caret-down" />
  </button>
</div>
`;

exports[`Dropdown changes the class when hovered 1`] = `
<div
  aria-expanded={false}
  aria-haspopup={true}
  className="uk-button-dropdown"
  onClick={false}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}>
  <button
    className="uk-button">
    Hover 
    <i
      className="uk-icon-caret-down" />
  </button>
</div>
`;

exports[`Dropdown changes the class when hovered 2`] = `
<div
  aria-expanded={true}
  aria-haspopup={true}
  className="uk-button-dropdown uk-open"
  onClick={false}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}>
  <button
    className="uk-button">
    Hover 
    <i
      className="uk-icon-caret-down" />
  </button>
</div>
`;

exports[`Dropdown changes the class when hovered 3`] = `
<div
  aria-expanded={true}
  aria-haspopup={true}
  className="uk-button-dropdown uk-open"
  onClick={false}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}>
  <button
    className="uk-button">
    Hover 
    <i
      className="uk-icon-caret-down" />
  </button>
</div>
`;

exports[`Dropdown changes the class when hovered 4`] = `
<div
  aria-expanded={false}
  aria-haspopup={true}
  className="uk-button-dropdown"
  onClick={false}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}>
  <button
    className="uk-button">
    Hover 
    <i
      className="uk-icon-caret-down" />
  </button>
</div>
`;

exports[`Dropdown changes the class when hovered 5`] = `
<div
  aria-expanded={true}
  aria-haspopup={true}
  className="uk-button-dropdown uk-open"
  onClick={false}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}>
  <button
    className="uk-button">
    Hover 
    <i
      className="uk-icon-caret-down" />
  </button>
</div>
`;

exports[`Dropdown changes the class when hovered 6`] = `
<div
  aria-expanded={true}
  aria-haspopup={true}
  className="uk-button-dropdown uk-open"
  onClick={false}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}>
  <button
    className="uk-button">
    Hover 
    <i
      className="uk-icon-caret-down" />
  </button>
</div>
`;

exports[`Dropdown closes sibling Dropdown on open 1`] = `
<div
  aria-expanded={false}
  aria-haspopup={true}
  className="uk-button-dropdown"
  onClick={false}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}>
  <button
    className="uk-button">
    First Instance 
    <i
      className="uk-icon-caret-down" />
  </button>
</div>
`;

exports[`Dropdown closes sibling Dropdown on open 2`] = `
<div
  aria-expanded={true}
  aria-haspopup={true}
  className="uk-button-dropdown uk-open"
  onClick={false}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}>
  <button
    className="uk-button">
    First Instance 
    <i
      className="uk-icon-caret-down" />
  </button>
</div>
`;

exports[`Dropdown closes sibling Dropdown on open 3`] = `
<div
  aria-expanded={false}
  aria-haspopup={true}
  className="uk-button-dropdown"
  onClick={false}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}>
  <button
    className="uk-button">
    Second Instance 
    <i
      className="uk-icon-caret-down" />
  </button>
</div>
`;

exports[`Dropdown renders correctly 1`] = `
<div
  aria-expanded={false}
  aria-haspopup={true}
  className="uk-button-dropdown"
  onClick={false}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}>
  <button
    className="uk-button">
    Hover 
    <i
      className="uk-icon-caret-down" />
  </button>
</div>
`;

exports[`Dropdown renders correctly 2`] = `
<li
  aria-expanded={false}
  aria-haspopup={true}
  className="uk-parent"
  onClick={false}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}>
  <a>
    Parent 
    <i
      className="uk-icon-caret-down" />
  </a>
</li>
`;

exports[`should be closed 1`] = `
<div
  aria-expanded={false}
  aria-haspopup={true}
  className="uk-button-dropdown"
  onClick={false}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}>
  <button
    className="uk-button">
    First Instance 
    <i
      className="uk-icon-caret-down" />
  </button>
</div>
`;

exports[`should be open 1`] = `
<div
  aria-expanded={true}
  aria-haspopup={true}
  className="uk-button-dropdown uk-open"
  onClick={false}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}>
  <button
    className="uk-button">
    Second Instance 
    <i
      className="uk-icon-caret-down" />
  </button>
</div>
`;
